--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/amcwong/platform-testing/issues"
   },
-  "homepage": "https://github.com/amcwong/platform-testing#readme"
+  "homepage": "https://github.com/amcwong/platform-testing#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0"
+  }
 }
